[gd_scene load_steps=5 format=3 uid="uid://b5b1rtwx7k03j"]

[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_ddxym"]
[ext_resource type="Texture2D" uid="uid://bqcahgnggpr4u" path="res://graphics/enemies/scout.png" id="1_yh2gd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y0pny"]
radius = 55.0818

[sub_resource type="CircleShape2D" id="CircleShape2D_tvkl5"]
radius = 860.002

[node name="Scout" type="CharacterBody2D" groups=["Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_ddxym")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 31)
rotation = 1.5708
texture = ExtResource("1_yh2gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-39, 7)
shape = SubResource("CircleShape2D_y0pny")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_tvkl5")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(67, -24)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(73, 15)

[node name="LaserCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
